Revision history for Perl extension MRO::Compat.

0.11 - Wed May 27, 2009
    - Fix misspelled docs for get_isarev. Closes RT#46401.
    - Bump optional prereq on Class::C3 to 0.20.

0.10 - Wed Mar 25, 2009
    - Remove the fake Build.PL. Module::Install doesn't support that anymore.
      (Florian Ragwitz)
    - Remove auto_install from Makefile.PL. Its use is strongly discouraged.
      (Closes RT#44542) (Simon Betrang)

0.09 - Thu Jun 5, 2008
    - No change from 0.08_01

0.08_01 - Mon Jun 2, 2008
    - Add fixup (and new tests) for RT#36256

0.07 - Tue May 20, 2008
    - Add explicit dependency on perl 5.6.0 or higher
      in Makefile.PL + META.yml

0.06_01 - Mon May 19, 2008
    - Fix for false classnames in mro::get_isarev, I guess
      I missed an instance during the 0.04 fixes.
      (reported by Daniel Austin)

0.05 - Sun Sept 9, 2007
    - Fix for RT#28661 (ill-formated %INC filenames aren't nice)

0.04 - Wed July 18, 2007
    - Removed doc warning now that 5.9.5 is out
    - Stopped the code from assuming valid classnames
      are true in boolean context
    - Misc small tweaks

0.03 - Mon Jun 4, 2007
    - Bumped C3 requirements
    - Loads mro.pm on 5.9.5+

0.02 - Sat May 12, 2007
    - Added mro::get_pkg_gen (which optionally works
      even faster with Class::C3::XS 0.04) in
      anticipation of it being added to 5.9.5
    - Changed mro::get_isarev to return arrayref in
      anticipation of that change in 5.9.5
    - Bumped requirements, added more docs

0.01_01 - Fri May 11, 2007
    - Initial dev release